--- a/src/pages/Regions/Region.less
+++ b/src/pages/Regions/Region.less
@@ -166,6 +166,31 @@ h4.ant-typography {
                 margin: 0px;
             }
         }
+
+
+        .cityItems1 {
+            margin: auto !important;
+            .cityMemberItem {
+                cursor: pointer;
+
+                .addFollower {
+                    color: #3c5438;
+                }
+            }
+
+            .cityMemberItem :hover {
+                text-decoration: underline;
+            }
+
+            .userName {
+                overflow: hidden;
+                text-overflow: ellipsis;
+                display: -webkit-box;
+                -webkit-line-clamp: 1;
+                -webkit-box-orient: vertical;
+                margin: 0px;
+            }
+        }
     }
 }
 
