--- a/src/pages/userPage/personalData/PersonalData.less
+++ b/src/pages/userPage/personalData/PersonalData.less
@@ -2,9 +2,6 @@
     width: 100%;
 }
 .spaceWrapper{
-    // position: fixed;
-    // width: 100%;
-    // height: 100%;
     top: 0;
     left: 0;
     z-index: 999;
@@ -110,7 +107,56 @@
     height: 10px;
     margin-bottom: 5px;
 }
-
+@media(max-width: 1321px){
+    .avatarWrapper{
+        width: 100% !important;
+        padding-top:5px;
+        padding-bottom: 5px;
+        margin: auto !important;
+    }
+    .allFields{
+        width: 750px;
+        padding: 5px;
+        margin: auto !important;
+    }
+    .formItem{
+        width: 100%;
+    }
+    .rowBlock{
+        display: contents;
+    }
+    .formContainer{
+         flex-direction: column;
+    }
+    .mainContainer{
+        padding: 10px;
+    }
+ }
+ @media(max-width: 1120px){
+    .avatarWrapper{
+        width: 100% !important;
+        padding-top:5px;
+        padding-bottom: 5px;
+        margin: auto !important;
+    }
+    .allFields{
+        width: 600px;
+        padding: 5px;
+        margin: auto !important;
+    }
+    .formItem{
+        width: 100%;
+    }
+    .rowBlock{
+        display: contents;
+    }
+    .formContainer{
+         flex-direction: column;
+    }
+    .mainContainer{
+        padding: 10px;
+    }
+ }
 @media(max-width: 768px){
    .avatarWrapper{
        width: 100% !important;
@@ -172,6 +218,7 @@
     text-align: center;
     cursor: pointer;
     align-items: center;
+    width: 192px;
     box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
 }
