--- a/src/pages/Actions/ActionEvent/EventUser/EventUser.module.css
+++ b/src/pages/Actions/ActionEvent/EventUser/EventUser.module.css
@@ -13,7 +13,7 @@
 
 .wrapperImg {
     width:  calc(100% - 60px);
-    height: 580px;
+    height: auto;
     box-shadow: 0 0 9px 1px rgba(0, 0, 0, .25);
     display: flex;
     flex-direction: column;
