--- a/src/pages/userPage/Blanks/Blanks.module.css
+++ b/src/pages/userPage/Blanks/Blanks.module.css
@@ -19,7 +19,7 @@
 }
 .wrapperImg {
     width:  calc(100% - 60px);
-    height: 521px;
+    height: auto;
     box-shadow: 0 0 9px 1px rgba(0, 0, 0, .25);
     display: flex;
     flex-direction: column;
